--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,3 @@
 title: Gameboard Help Documentation
-description: Here you can find the Gameboard help documentation organized by role: participant, observer, moderator, game designer, and challenge designer.
+description: Here you can find the Gameboard help documentation organized by role.
 theme: jekyll-theme-minimal
